<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?attr/colorOnSecondary">

    <TextView
        android:id="@+id/underLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underLogoText"
        android:textSize="18sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/roboto_condensed_regular"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:layout_marginBottom="150sp"
        android:text="@string/LogoText"
        android:textAllCaps="true"
        android:textColor="@color/red_500"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150sp"
        app:layout_constraintBottom_toTopOf="@+id/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kisspng_pharmacy_medicine_health_care_scalable_vector_grap_pills_pill_png_icon_14_png_repo_free_png_icons_5cc02ec6697423_0161324315560987584319__1_"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btnAppend"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="30dp"

        android:text="@string/start"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underLogo"
        tools:ignore="OnClick,TextContrastCheck" />

    <Button
        android:id="@+id/scale1"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="30dp"
        android:onClick="search1"

        android:drawableStart="@drawable/vector_search_icon"
        android:text="@string/findPharmacy"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underLogo"/>

    <Button
        android:id="@+id/scale2"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginHorizontal="40sp"
        android:drawableStart="@drawable/vector_search_icon"
        android:layout_marginTop="10sp"

        android:onClick="search2"
        android:text="@string/findMedical"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scale1" />

    <Button
        android:id="@+id/scale3"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginHorizontal="40sp"
        android:drawableStart="@drawable/vector_search_icon"
        android:layout_marginTop="10sp"

        android:onClick="post1"
        android:text="@string/addPharmacy"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scale2"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/scale4"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginHorizontal="40sp"
        android:drawableStart="@drawable/vector_search_icon"
        android:layout_marginTop="10sp"

        android:onClick="post2"
        android:text="@string/addMedical"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scale3"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>
