<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/mainDisplay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="25sp"
        android:layout_marginTop="120sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/EDname"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/red_200"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/EDaddress"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="20sp"
                        android:textAlignment="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editTextTextPersonAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:backgroundTint="@color/red_200"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onclick"
                android:textColor="@color/white"
                android:text="@string/start">
            </Button>
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/prgrBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mainDisplay"
        android:layout_alignTop="@+id/mainDisplay"
        android:layout_alignEnd="@+id/mainDisplay"
        android:layout_marginTop="150dp"
        android:visibility="invisible" />
    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40sp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/findMedical"
        android:textAlignment="center"
        android:textColor="?attr/colorSecondary"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/added_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dataAdded"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="150dp"
        android:layout_alignStart="@+id/mainDisplay"
        android:layout_alignTop="@+id/mainDisplay"
        android:layout_alignEnd="@+id/mainDisplay"
        android:textColor="?attr/colorSecondary"
        android:visibility="invisible"
        />
</RelativeLayout>
